--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                     </div>
                 </article>
             </section>
+            <section class="popup">
+                <div class="popup__container">
+                    <h2 class="popup__title">Редактировать профиль</h2>
+                    <input class="popup__name">
+                    <input class="popup__info">
+                    <button class="popup__save">Сохранить</button>
+                    <button class="popup__close"></button>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
