--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                 </article>
             </section>
-            <section class="popup">
+            <section class="popup popup_opened">
                 <div class="popup__container">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <input class="popup__name">
