--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="/images/logo/Vector.svg">
+            <img class="header__logo" src="./images/logo/Vector.svg">
         </header>
         <main class="content">
             <section class="profile">
-                <img class="profile__avatar" src="/images/profile__image.jpg">
+                <img class="profile__avatar" src="./images/profile__image.jpg">
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
-                    <button class="profile__button-editor">
+                    <button class="profile__button-editor" type="button">
                     </button>
                 </div>
-                <button class="profile__button-add">
+                <button class="profile__button-add" type="button">
                 </button>
             </section>
             <section class="elements">
@@ -100,14 +100,14 @@
                     </div>
                 </article>
             </section>
-            <section class="popup popup_opened">
-                <div class="popup__container">
+            <section class="popup">
+                <form class="popup__container">
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <input class="popup__name">
-                    <input class="popup__info">
-                    <button class="popup__save">Сохранить</button>
-                    <button class="popup__close"></button>
-                </div>
+                    <input class="popup__name" type="text">
+                    <input class="popup__info" type="text">
+                    <input class="popup__save" type="submit" value="Сохранить">
+                    <button class="popup__close" type="button"></button>
+                </form>
             </section>
         </main>
         <footer class="footer">
