--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="./images/logo/Vector.svg">
+            <img class="header__logo" src="./images/logo/Vector.svg" alt="логотип">
         </header>
         <main class="content">
             <section class="profile">
-                <img class="profile__avatar" src="./images/profile__image.jpg">
+                <img class="profile__avatar" src="./images/profile__image.jpg" alt="фото">
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
