--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>mesto</title>
 </head>
 
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="./images/logo/Vector.svg" alt="логотип">
@@ -20,69 +20,71 @@
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
-                    <button class="profile__button-editor" type="button">
+                    <button class="profile__button-editor" aria-label="editor" type="button">
                     </button>
                 </div>
-                <button class="profile__button-add" type="button">
+                <button class="profile__button-add" aria-label="add" type="button">
                 </button>
             </section>
             <section class="elements">
                 <article class="element">
                     <img class="element__img" src="./images/img1.jpg" alt="фото">
                     <div class="element__box">
-                        <p class="element__text">Карачаевск</p>
+                        <h2 class="element__text">Карачаевск</h2>
                         <img class="element__like" src="./images/laik.svg" alt="лайк">
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img2.jpg" alt="фото">
                     <div class="element__box">
-                        <p class="element__text">Гора Эльбрус</p>
+                        <h2 class="element__text">Гора Эльбрус</h2>
                         <img class="element__like" src="./images/laik.svg" alt="лайк">
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img3.jpg" alt="фото">
                     <div class="element__box">
-                        <p class="element__text">Домбай</p>
+                        <h2 class="element__text">Домбай</h2>
                         <img class="element__like" src="./images/laik.svg" alt="лайк">
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img4.jpg" alt="фото">
                     <div class="element__box">
-                        <p class="element__text">Гора Эльбрус</p>
+                        <h2 class="element__text">Гора Эльбрус</h2>
                         <img class="element__like" src="./images/laik.svg" alt="лайк">
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img5.jpg" alt="фото">
                     <div class="element__box">
-                        <p class="element__text">Домбай</p>
+                        <h2 class="element__text">Домбай</h2>
                         <img class="element__like" src="./images/laik.svg" alt="лайк">
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img6.jpg" alt="фото">
                     <div class="element__box">
-                        <p class="element__text">Карачаево-Черкесская</p>
+                        <h2 class="element__text">Карачаево-Черкесская</h2>
                         <img class="element__like" src="./images/laik.svg" alt="лайк">
                     </div>
                 </article>
-            </section>
-            <section class="popup">
-                <form class="popup__container">
-                    <h2 class="popup__title">Редактировать профиль</h2>
-                    <input class="popup__name" type="text">
-                    <input class="popup__info" type="text">
-                    <input class="popup__save" type="submit" value="Сохранить">
-                    <button class="popup__close" type="button"></button>
-                </form>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
+        <div class="popup">
+            <div class="popup__containers">
+                <form class="popup__container" name="popup__container">
+                    <h2 class="popup__title">Редактировать профиль</h2>
+                    <input class="popup__input popup__input_name" name="name" type="text">
+                    <input class="popup__input popup__input_info" name="info" type="text">
+                    <input class="popup__save" name="save" type="submit" value="Сохранить">
+                </form>
+                <button class="popup__close" type="button"></button>
+            </div>
+        </div>
     </div>
     <script src="pages/index.js"></script>
 </body>
