--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
                     <img class="element__img" src="./images/img1.jpg" alt="фото">
                     <div class="element__box">
                         <h2 class="element__text">Карачаевск</h2>
-                        <img class="element__like" src="./images/laik.svg" alt="лайк">
+                        <button class="element__like" aria-label="like" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img2.jpg" alt="фото">
                     <div class="element__box">
                         <h2 class="element__text">Гора Эльбрус</h2>
-                        <img class="element__like" src="./images/laik.svg" alt="лайк">
+                        <button class="element__like" aria-label="like" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img3.jpg" alt="фото">
                     <div class="element__box">
                         <h2 class="element__text">Домбай</h2>
-                        <img class="element__like" src="./images/laik.svg" alt="лайк">
+                        <button class="element__like" aria-label="like" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img4.jpg" alt="фото">
                     <div class="element__box">
                         <h2 class="element__text">Гора Эльбрус</h2>
-                        <img class="element__like" src="./images/laik.svg" alt="лайк">
+                        <button class="element__like" aria-label="like" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img5.jpg" alt="фото">
                     <div class="element__box">
                         <h2 class="element__text">Домбай</h2>
-                        <img class="element__like" src="./images/laik.svg" alt="лайк">
+                        <button class="element__like" aria-label="like" type="button"></button>
                     </div>
                 </article>
                 <article class="element">
                     <img class="element__img" src="./images/img6.jpg" alt="фото">
                     <div class="element__box">
                         <h2 class="element__text">Карачаево-Черкесская</h2>
-                        <img class="element__like" src="./images/laik.svg" alt="лайк">
+                        <button class="element__like" aria-label="like" type="button"></button>
                     </div>
                 </article>
             </section>
@@ -78,8 +78,8 @@
             <div class="popup__containers">
                 <form class="popup__container" name="popup__container">
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <input class="popup__input popup__input_name" name="name" type="text">
-                    <input class="popup__input popup__input_info" name="info" type="text">
+                    <input class="popup__input popup__input_type_name" name="name" type="text">
+                    <input class="popup__input popup__input_type_info" name="info" type="text">
                     <input class="popup__save" name="save" type="submit" value="Сохранить">
                 </form>
                 <button class="popup__close" type="button"></button>
