--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="popup popup_opacity" id="popup_image">
             <div class="popup__image">
-                <img class="popup__jpg" src="" alt="">
+                <img class="popup__jpg" src="https://polit.ru/media/photolib/2019/03/12/%D0%A0%D1%8F%D0%B7%D0%B0%D0%BD%D1%8C_%D0%B7%D0%B8%D0%BC%D0%BE%D0%B9_1552384794.jpg" alt="Рязань">
                 <h2 class="popup__text"></h2>
                 <button class="popup__close" type="button"></button>
             </div>
