--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <input class="form__input" required minlength="2" maxlength="200" id="info"
                             name="info" type="text">
                         <span id="error-info" class="form__error"></span>
-                        <button class="popup__button popup__button_disabled" id="button-editor" name="button" type="submit">Сохранить</button>
+                        <button class="popup__button popup__button_disabled" id="botton-editor" name="button" type="submit">Сохранить</button>
                     </form>
                 </div>
                 <button class="popup__close" type="button"></button>
