--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                 <div class="popup__container" id="popup__container_editor" name="popup__container">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form class="form">
-                        <input class="form__input" required minlength="2" maxlength="40" id="name"
-                            name="name" type="text">
+                        <input class="form__input" required minlength="2" maxlength="40" id="name" name="name"
+                            type="text">
                         <span id="error-name" class="form__error"></span>
-                        <input class="form__input" required minlength="2" maxlength="200" id="info"
-                            name="info" type="text">
+                        <input class="form__input" required minlength="2" maxlength="200" id="info" name="info"
+                            type="text">
                         <span id="error-info" class="form__error"></span>
-                        <button class="popup__button popup__button_disabled" id="botton-editor" name="button" type="submit">Сохранить</button>
+                        <button class="popup__button popup__button_disabled" id="botton-editor" name="button"
+                            type="submit">Сохранить</button>
                     </form>
                 </div>
                 <button class="popup__close" type="button"></button>
@@ -56,13 +57,14 @@
                 <div class="popup__container" id="popup__container_add" name="popup__container">
                     <h2 class="popup__title">Новое место</h2>
                     <form class="form" id="form-add">
-                        <input class="form__input" required minlength="2" maxlength="30" id="title"
-                            name="title" type="text" placeholder="Название">
+                        <input class="form__input" required minlength="2" maxlength="30" id="title" name="title"
+                            type="text" placeholder="Название">
                         <span id="error-title" class="form__error"></span>
                         <input class="form__input" required id="link" name="link" type="url"
                             placeholder="Ссылка на картинку">
                         <span id="error-link" class="form__error"></span>
-                        <button class="popup__button popup__button_disabled" id="botton-add" name="button" type="submit">Создать</button>
+                        <button class="popup__button popup__button_disabled" id="botton-add" name="button"
+                            type="submit">Создать</button>
                     </form>
                 </div>
                 <button class="popup__close" type="button"></button>
@@ -78,7 +80,7 @@
                 <button class="popup__close" type="button"></button>
             </div>
         </div>
-        <template class="template">
+        <template class="template" id="template">
             <article class="element">
                 <img class="element__img">
                 <div class="element__box">
@@ -89,8 +91,7 @@
             </article>
         </template>
     </div>
-    <script src="scripts/index.js"></script>
-    <script src="scripts/validate.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
