--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form class="form">
                         <input class="form__input" required minlength="2" maxlength="40" id="name" name="name"
-                            type="text">
+                            type="text" placeholder="Имя">
                         <span id="error-name" class="form__error"></span>
                         <input class="form__input" required minlength="2" maxlength="200" id="info" name="info"
-                            type="text">
+                            type="text" placeholder="Профессиональная деятельность">
                         <span id="error-info" class="form__error"></span>
                         <button class="popup__button popup__button_disabled" id="botton-editor" name="button"
                             type="submit">Сохранить</button>
