--- a/src/index.html
+++ b/src/index.html
@@ -5,34 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/index.css">
     <title>mesto</title>
 </head>
 
 <body class="body">
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="./images/logo/Vector.svg" alt="логотип">
+            <img class="header__logo" src="<%=require('./images/logo/Vector.svg')%>" alt="логотип">
         </header>
         <main class="content">
             <section class="profile">
-                <img class="profile__avatar" src="./images/profile__image.jpg" alt="фото">
+                <img class="profile__avatar" src="<%=require('./images/profile__image.jpg')%>" alt="фото">
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <button class="profile__button-editor" aria-label="editor" type="button"></button>
                     <p class="profile__subtitle">Исследователь океана</p>
-                    <button class="profile__button-editor" aria-label="editor" type="button">
-                    </button>
                 </div>
                 <button class="profile__button-add" aria-label="add" type="button">
                 </button>
             </section>
             <section class="elements">
+                <ul class="elements__list">
+
+                </ul>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
-        <div class="popup" id="popup_editor">
+        <div class="popup popup_editor">
             <div class="popup__overlay"></div>
             <div class="popup__containers">
                 <div class="popup__container" id="popup__container_editor" name="popup__container">
@@ -51,7 +52,7 @@
                 <button class="popup__close" type="button"></button>
             </div>
         </div>
-        <div class="popup" id="popup_add">
+        <div class="popup popup_add">
             <div class="popup__overlay"></div>
             <div class="popup__containers">
                 <div class="popup__container" id="popup__container_add" name="popup__container">
@@ -70,17 +71,15 @@
                 <button class="popup__close" type="button"></button>
             </div>
         </div>
-        <div class="popup popup_opacity" id="popup_image">
+        <div class="popup popup_opacity popup_image">
             <div class="popup__overlay"></div>
             <div class="popup__image">
-                <img class="popup__jpg"
-                    src="https://polit.ru/media/photolib/2019/03/12/%D0%A0%D1%8F%D0%B7%D0%B0%D0%BD%D1%8C_%D0%B7%D0%B8%D0%BC%D0%BE%D0%B9_1552384794.jpg"
-                    alt="Рязань">
+                <img class="popup__jpg" src="" alt="">
                 <h2 class="popup__text"></h2>
                 <button class="popup__close" type="button"></button>
             </div>
         </div>
-        <template class="template" id="template">
+        <template class="template">
             <article class="element">
                 <img class="element__img">
                 <div class="element__box">
@@ -91,7 +90,6 @@
             </article>
         </template>
     </div>
-    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
