--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
         <div class="popup popup_opacity popup_image">
             <div class="popup__overlay"></div>
             <div class="popup__image">
-                <img class="popup__jpg" src="" alt="">
+                <img class="popup__jpg" src="#" alt="">
                 <h2 class="popup__text"></h2>
                 <button class="popup__close" type="button"></button>
             </div>
