--- a/src/index.html
+++ b/src/index.html
@@ -39,15 +39,15 @@
         <div class="popup popup_editor">
             <div class="popup__overlay"></div>
             <div class="popup__containers">
-                <div class="popup__container" id="popup__container_editor" name="popup__container">
+                <div class="popup__container" id="popup__container_editor">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form class="form">
                         <input class="form__input" required minlength="2" maxlength="40" id="name" name="name"
                             type="text" placeholder="Имя">
-                        <span id="error-name" class="form__error"></span>
+                        <span id="name-error" class="form__error"></span>
                         <input class="form__input" required minlength="2" maxlength="200" id="info" name="about"
                             type="text" placeholder="Профессиональная деятельность">
-                        <span id="error-info" class="form__error"></span>
+                        <span id="info-error" class="form__error"></span>
                         <button class="popup__button popup__button_disabled" id="botton-editor" name="button"
                             type="submit">Сохранить</button>
                     </form>
@@ -58,15 +58,15 @@
         <div class="popup popup_add">
             <div class="popup__overlay"></div>
             <div class="popup__containers">
-                <div class="popup__container" id="popup__container_add" name="popup__container">
+                <div class="popup__container" id="popup__container_add">
                     <h2 class="popup__title">Новое место</h2>
                     <form class="form" id="form-add">
                         <input class="form__input" required minlength="2" maxlength="30" id="title" name="name"
                             type="text" placeholder="Название">
-                        <span id="error-title" class="form__error"></span>
+                        <span id="title-error" class="form__error"></span>
                         <input class="form__input" required id="link" name="link" type="url"
                             placeholder="Ссылка на картинку">
-                        <span id="error-link" class="form__error"></span>
+                        <span id="link-error" class="form__error"></span>
                         <button class="popup__button popup__button_disabled" id="botton-add" name="button"
                             type="submit">Создать</button>
                     </form>
@@ -77,12 +77,12 @@
         <div class="popup popup_avatar">
             <div class="popup__overlay"></div>
             <div class="popup__containers">
-                <div class="popup__container" id="popup__container_avatar" name="popup__container">
+                <div class="popup__container" id="popup__container_avatar">
                     <h2 class="popup__title">Обновить аватар</h2>
                     <form class="form" id="form-avatar">
-                        <input class="form__input" required id="link" name="avatar" type="url"
+                        <input class="form__input" required id="avatar" name="avatar" type="url"
                             placeholder="Cсылка на новый аватар">
-                        <span id="error-link" class="form__error"></span>
+                        <span id="avatar-error" class="form__error"></span>
                         <button class="popup__button popup__button_disabled" id="botton-avatar" name="button"
                             type="submit">Сохранить</button>
                     </form>
@@ -93,11 +93,10 @@
         <div class="popup popup_delete">
             <div class="popup__overlay"></div>
             <div class="popup__containers">
-                <div class="popup__container" id="popup__container_add" name="popup__container">
+                <div class="popup__container" id="popup__container_delete">
                     <h2 class="popup__title">Вы уверены?</h2>
                     <form class="form" id="form-delete">
-                    <button class="popup__button" id="botton-delete" name="button"
-                        type="submit">Да</button>
+                        <button class="popup__button" id="botton-delete" name="button" type="submit">Да</button>
                     </form>
                 </div>
                 <button class="popup__close" type="button"></button>
